Fix landscape phone screen overflow

--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100vh;
+    min-height: 100vh;
     text-align: center;
 }
 
@@ -56,6 +56,5 @@ a.button:hover {
     body {
         padding: 1em;
         min-height: 100vh;
-        justify-content: center;
     }
 }
